<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">FitoTrack</string>
    <string name="stop">Stop</string>
    <string name="delete">Delete</string>
    <string name="exporting">Exporting</string>
    <string name="error">Error</string>
    <string name="errorGpxExportFailed">The GPX export has failed.</string>
    <string name="errorExportFailed">The data export has failed.</string>
    <string name="errorImportFailed">The data import has failed.</string>
    <string name="shareFile">Share file</string>
    <string name="initialising">Initialising</string>
    <string name="workouts">Workouts</string>
    <string name="locationData">Location data</string>
    <string name="converting">Converting</string>
    <string name="finished">Finished</string>
    <string name="loadingFile">Loading file</string>
    <string name="chooseBackupFile">Choose Backup-File</string>
    <string name="importBackupMessage">Back up your current data now if you want to keep it. Restore prior backup now\?</string>
    <string name="restore">Restore</string>
    <string name="backup">Backup</string>
    <string name="setPreferencesTitle">Set Preferences</string>
    <string name="setPreferencesMessage">You can set your preferred unit system and your weight in the settings.</string>
    <string name="timeMinuteSingular">Minute</string>
    <string name="timeMinutePlural">Minutes</string>
    <string name="timeMinuteShort">min</string>
    <string name="timeHourSingular">Hour</string>
    <string name="timeHourPlural">Hours</string>
    <string name="timeHourShort">h</string>
    <string name="timeSecondsShort">s</string>
    <string name="and">and</string>
    <string name="errorEnterValidNumber">Enter a valid number</string>
    <string name="errorWorkoutAddFuture">The workout cannot be in the future</string>
    <string name="errorEnterValidDuration">Enter a valid duration</string>
    <string name="announcementGPSStatus">GPS Status</string>
    <string name="announcementWorkoutActions">Workout Actions (pause, resume, etc.)</string>
    <string name="voiceAnnouncementsTitle">Voice Announcements</string>
    <string name="pref_voice_announcements_summary">Configure voice prompts that inform you during the workout</string>
    <string name="pref_announcements_config_title">Announcement Trigger</string>
    <string name="pref_announcements_config_summary">Choose the time and distance between voice announcements</string>
    <string name="pref_announcements_content">Content of the announcements</string>
    <string name="workoutRecordingTypeGps">GPS Workouts</string>
    <string name="workoutRecordingTypeIndoor">Indoor Workouts</string>
    <string name="gpsLost">GPS signal lost</string>
    <string name="gpsFound">GPS signal found</string>
    <string name="workoutTime">Time</string>
    <string name="workoutDate">Date</string>
    <string name="workoutDuration">Duration</string>
    <string name="workoutAvgDurationLong">Average Duration</string>
    <string name="workoutDurationSum">Duration sum</string>
    <string name="workoutPauseDuration">Pause Duration</string>
    <string name="workoutAvgPauseDuration">Average Pause Duration</string>
    <string name="workoutPauseDurationSum">Pause Duration sum</string>
    <string name="workoutStartTime">Start Time</string>
    <string name="workoutEndTime">End Time</string>
    <string name="workoutDistance">Distance</string>
    <string name="workoutRepetitions">Repetitions</string>
    <string name="workoutSets">Sets</string>
    <string name="workoutPace">Pace</string>
    <string name="workoutRoute">Route</string>
    <string name="workoutSpeed">Speed</string>
    <string name="workoutFrequency">Frequency</string>
    <string name="workoutAvgFrequencyShort">Avg. Frequency</string>
    <string name="workoutAvgFrequencyLong">Average Frequency</string>
    <string name="workoutCurrentFrequency">Current Frequency</string>
    <string name="workoutMaxFrequency">Max Frequency</string>
    <string name="workoutIntensity">Intensity</string>
    <string name="workoutAvgIntensityShort">Avg. Intensity</string>
    <string name="workoutMaxIntensity">Max Intensity</string>
    <string name="workoutAvgSpeedShort">Avg. Speed</string>
    <string name="workoutAvgSpeedLong">Average Speed</string>
    <string name="workoutTopSpeed">Top Speed</string>
    <string name="workoutBurnedEnergy">Calories burned</string>
    <string name="workoutTotalEnergy">Total Energy</string>
    <string name="workoutEnergyConsumption">Energy Consumption</string>
    <string name="workoutHeartRate">Heart Rate</string>
    <string name="heartRateSensorBattery">Sensor Battery</string>
    <string name="workoutMaxHeartRate">Max Heart Rate</string>
    <string name="workoutAvgHeartRate">Avg. heart rate</string>
    <string name="workoutEdited">This workout has been edited.</string>
    <string name="uploading">Uploading</string>
    <string name="enterVerificationCode">Enter Verification Code</string>
    <string name="authenticationFailed">Authentication failed.</string>
    <string name="upload">Upload</string>
    <string name="uploadSuccessful">Upload Successful</string>
    <string name="uploadFailed">Upload Failed</string>
    <string name="uploadFailedOsmNotAuthorized">Not authorized, try again</string>
    <string name="workoutAscent">Ascent</string>
    <string name="workoutDescent">Descent</string>
    <string name="workoutMinHeight">Min height</string>
    <string name="workoutMaxHeight">Max height</string>
    <string name="height">Height</string>
    <string name="workoutTypeRunning">Running</string>
    <string name="workoutTypeWalking">Walking</string>
    <string name="workoutTypeCycling">Cycling</string>
    <string name="workoutTypeHiking">Hiking</string>
    <string name="workoutTypeSkateboarding">Skateboarding</string>
    <string name="workoutTypeInlineSkating">Inline Skating</string>
    <string name="workoutTypeRowing">Rowing</string>
    <string name="workoutTypeSwimming">Swimming</string>
    <string name="workoutTypeOther">Other</string>
    <string name="workoutTypeTreadmill">Treadmill</string>
    <plurals name="workoutStep">
        <item quantity="one">Step</item>
        <item quantity="other">Steps</item>
    </plurals>
    <string name="workoutTypeRopeSkipping">Rope Skipping</string>
    <string name="workoutTypeTrampolineJumping">Trampoline Jumping</string>
    <plurals name="workoutJump">
        <item quantity="one">Jump</item>
        <item quantity="other">Jumps</item>
    </plurals>
    <string name="workoutTypePushUps">Push ups</string>
    <plurals name="workoutPushUp">
        <item quantity="one">Push up</item>
        <item quantity="other">Push ups</item>
    </plurals>
    <string name="workoutTypePullUps">Pull ups</string>
    <plurals name="workoutPullUp">
        <item quantity="one">Pull up</item>
        <item quantity="other">Pull ups</item>
    </plurals>
    <string name="unknown">Unknown</string>
    <string name="workoutTypeAdd">Add</string>
    <string name="workoutTypeAll">All</string>
    <string name="type">Type</string>
    <string name="enterWorkout">Enter Workout</string>
    <string name="importWorkout">Import Workout</string>
    <string name="setDuration">Set Duration</string>
    <string name="pref_weight">Your Weight</string>
    <string name="pref_weight_summary">Your weight is needed to calculate the burned calories</string>
    <string name="pref_step_length">Step Length</string>
    <string name="pref_unit_system">Preferred system of units</string>
    <string name="mapStyle">Map Style</string>
    <string name="trackStyle">Track Style</string>
    <string name="prefTrackStyleUsageTitle">Use track coloring automatically</string>
    <string name="pref_announcement_mode">Announcement Mode</string>
    <string name="theme">Theme</string>
    <string name="intervalsIncludePauseTitle">Include Pause Time in Interval Training</string>
    <string name="intervalsIncludePauseSummary">If activated, the intervals will continue even if you do pauses in your workout.</string>
    <string name="intervalTraining">Interval Training</string>
    <string name="currentSpeed">Current Speed</string>
    <string name="avgSpeedInMotion">Avg. Speed (in Motion)</string>
    <string name="avgSpeedTotalShort">Avg. Speed (Total)</string>
    <string name="preferencesUserInterfaceTitle">User Interface</string>
    <string name="preferencesUserInterfaceSummary">Personalize the app</string>
    <string name="preferencesRecordingTitle">Recording</string>
    <string name="preferencesDebugTitle">Debug</string>
    <string name="preferencesRecordingSummary">Manage the workout recording</string>
    <string name="preferencesBackupTitle">Database</string>
    <string name="preferencesBackupSummary">Backup/Restore your workout data</string>
    <string name="preferencesCategoryAppearance">Appearance</string>
    <string name="preferencesCategoryMap">Map</string>
    <string name="preferenceDateFormat">Date Format</string>
    <string name="preferenceTimeFormat">Time Format</string>
    <string name="preferenceCurrentSpeedAverageTimeSummary">Replace current speed by an average</string>
    <string name="preferenceCurrentSpeedAverageTimeTitle">Averaged speed</string>
    <string name="preferenceFirstDayOfWeek">Week start</string>
    <string name="pref_energy_unit">Energy unit</string>
    <string name="manageAutoTimeoutSummary">Edit the interval for automatic workout stop</string>
    <string name="intervalAutoTimeoutTraining">Auto Workout Timeout</string>
    <string name="currentTime">Current Time</string>
    <string name="help">Help</string>
    <string name="speedLastMinute">Avg. Speed (Last Minute)</string>
    <string name="aboutTitle">About</string>
    <string name="autoPauseTitle">Auto pause</string>
    <string name="autoPauseSummary">Automatically pause and continue workouts</string>
    <string name="prefShowOnLockScreenTitle">Visible on lock screen</string>
    <string name="prefShowOnLockScreenSummary">Show workout info even if the device is locked.</string>
    <string name="preferenceCategoryVoiceFeedback">Voice feedback</string>
    <string name="customWorkoutTypesTitle">Custom Workout Types</string>
    <string name="pref_map_directory">Offline Map Directory</string>
    <string name="pref_render_theme_style">Render Style</string>
    <string name="downloadMapsTitle">Download Maps</string>
    <string name="intervalAutoStartDelayTraining">Auto Start Workout Delay</string>
    <string name="manageAutoStartDelaySummary">Choose a default countdown for automatic workout start</string>
    <string name="nfcStartTitle">Scan to start</string>
    <string name="nfcStartSummary">If activated, you\'ll be able to start and stop workouts by scanning an NFC tag</string>
    <string name="announcementCountdown">Auto Start Actions (countdown, state, etc.)</string>
    <string name="moveStartOfWorkout">Cut start</string>
    <string name="moveEndOfWorkout">Cut end</string>
    <string name="actionApply">Apply</string>
    <string name="manageAutoStartModeSummary">Change the mode of automatic workout start</string>
    <string name="intervalAutoStartModeTraining">Auto Start Workout Mode</string>
    <string name="pref_announcements_pace_control_summary">Warn when below or above a specified speed</string>
    <string name="pref_announcements_pace_control_title">Pace-warnings</string>
    <string name="workoutDistanceSum">Distance sum</string>
    <string name="showWorkoutZoomControlsSummary">Enable zoom and pan controls in the map while recording GPS workouts</string>
    <string name="showWorkoutZoomControlsTitle">Zooming and panning</string>
    <string name="zoomWithVolumeButtonsSummary">Volume up and down controls zooming in and out</string>
    <string name="zoomWithVolumeButtonsTitle">Zoom with volume buttons</string>
    <string name="show_sum">Show sum</string>
</resources>