<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 Jannis Scheibe <jannis@tadris.de>
  ~
  ~ This file is part of FitoTrack
  ~
  ~ FitoTrack is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     FitoTrack is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:id="@+id/nfcStart"
        android:defaultValue="false"
        android:key="nfcStart"
        android:summary="@string/nfcStartSummary"
        android:title="@string/nfcStartTitle" />

    <Preference
        android:id="@+id/autoStartModeConfig"
        android:key="autoStartModeConfig"
        android:summary="@string/manageAutoStartModeSummary"
        android:title="@string/intervalAutoStartModeTraining" />

    <Preference
        android:id="@+id/autoStartDelayConfig"
        android:key="autoStartDelayConfig"
        android:summary="@string/manageAutoStartDelaySummary"
        android:title="@string/intervalAutoStartDelayTraining" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="autoPause"
        android:summary="@string/autoPauseSummary"
        android:title="@string/autoPauseTitle" />

    <Preference
        android:key="autoTimeoutConfig"
        android:summary="@string/manageAutoTimeoutSummary"
        android:title="@string/intervalAutoTimeoutTraining" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="showOnLockScreen"
        android:summary="@string/prefShowOnLockScreenSummary"
        android:title="@string/prefShowOnLockScreenTitle" />

    <Preference
        android:id="@+id/currentSpeedAverageTimeConfig"
        android:key="currentSpeedAverageTimeConfig"
        android:summary="@string/preferenceCurrentSpeedAverageTimeSummary"
        android:title="@string/preferenceCurrentSpeedAverageTimeTitle" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="showWorkoutZoomControls"
        android:summary="@string/showWorkoutZoomControlsSummary"
        android:title="@string/showWorkoutZoomControlsTitle" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="zoomWithVolumeButtons"
        android:summary="@string/zoomWithVolumeButtonsSummary"
        android:title="@string/zoomWithVolumeButtonsTitle" />

    <PreferenceCategory android:title="@string/preferenceCategoryVoiceFeedback">

        <Preference
            android:key="speech"
            app:fragment="de.tadris.fitness.ui.settings.VoiceAnnouncementsSettingsFragment"
            android:title="@string/voiceAnnouncementsTitle" />

        <Preference
            android:key="intervals"
            android:title="@string/intervalTraining" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="intervalsIncludePause"
            android:summary="@string/intervalsIncludePauseSummary"
            android:title="@string/intervalsIncludePauseTitle" />


    </PreferenceCategory>

</PreferenceScreen>
