<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 Jannis Scheibe <jannis@tadris.de>
  ~
  ~ This file is part of FitoTrack
  ~
  ~ FitoTrack is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     FitoTrack is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="userInterface"
        android:summary="@string/preferencesUserInterfaceSummary"
        android:title="@string/preferencesUserInterfaceTitle"
        app:fragment="de.tadris.fitness.ui.settings.InterfaceSettingsFragment" />

    <Preference
        android:key="recordingSettings"
        android:summary="@string/preferencesRecordingSummary"
        android:title="@string/preferencesRecordingTitle"
        app:fragment="de.tadris.fitness.ui.settings.RecordingSettingsFragment" />

    <Preference
        android:key="workoutTypeSettings"
        android:title="@string/customWorkoutTypesTitle" />

    <Preference
        android:key="backupSettings"
        android:summary="@string/preferencesBackupSummary"
        android:title="@string/preferencesBackupTitle"
        app:fragment="de.tadris.fitness.ui.settings.BackupSettingsFragment" />

    <Preference
        android:key="debugSettings"
        android:title="@string/preferencesDebugTitle"
        app:fragment="de.tadris.fitness.ui.settings.DebugSettingsFragment" />

    <Preference
        android:key="about"
        android:title="@string/aboutTitle" />

</PreferenceScreen>
