<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 Jannis Scheibe <jannis@tadris.de>
  ~
  ~ This file is part of FitoTrack
  ~
  ~ FitoTrack is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     FitoTrack is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionMoveStartHere"
        android:icon="@drawable/ic_arrow_left"
        android:title="@string/moveStartOfWorkout"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionMoveEndHere"
        android:icon="@drawable/ic_arrow_right"
        android:title="@string/moveEndOfWorkout"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionMoveApply"
        android:icon="@drawable/ic_save"
        android:title="@string/actionApply"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionMoveHelp"
        android:icon="@drawable/ic_help"
        android:title="@string/help"
        app:showAsAction="always" />
</menu>